# omegon

./: .gitignore  .gitmodules  .npmignore  .session_log  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN-global-mind.md  Justfile  PRIVACY.md  README.md  SCRIBE_RPC.md  SECURITY_ASSESSMENT.md  THIRD_PARTY_NOTICES.md  bootstrap.sh  edges.test.ts  extraction-v2.ts  factstore.ts  index.ts  minds.ts  package.json  storage.test.ts  template.test.ts
.omegon/: history  milestones.json  profile.json
.pi/: adversarial-review-2026-03-06.md  config.json  next-session-prompt.md  provider-contracts.json
.tmp/: cleave-smoke-plan.json
config/: AGENTS.md
core/: CHANGELOG.md  Cargo.toml  install.sh
core/crates/omegon-codescan/: Cargo.toml
core/crates/omegon-codescan/src/: bm25.rs  cache.rs  code.rs  indexer.rs  knowledge.rs  lib.rs
core/crates/omegon-extension/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
core/crates/omegon-extension/src/: error.rs  extension.rs  lib.rs  manifest.rs  mind.rs  rpc.rs
core/crates/scribe-rpc/: Cargo.toml
core/crates/scribe-rpc/src/: main.rs
core/crates/scribe-rpc/src/cli/: mod.rs
core/crates/scribe-rpc/src/rpc/: dispatch.rs  mod.rs
core/crates/scribe-rpc/src/scribe/: mod.rs
data/: route-matrix.json  tool-limitations.md
design/: README.md  fuse-aware-design.md  skill-aware-child-dispatch.md
docs/: agent-assess-tooling-access.md  agent-eval-framework.md  agent-loop-resilience.md  agent-loop-test-harness.md  ai-directory-convention.md  alpharius-terminal-themes.md  alpharius-theme.md  anthropic-subscription-interactive-boundary.md  anthropic-subscription-tos.md  assessment-blattman-patterns.md  auspex-agent-context-bridge.md  auspex-attach-handoff.md  auspex-ipc-contract.md  auspex-noninteractive-supervision-boundary.md  auspex-omegon-launch-contract.md  auto-doc-generation.md  benchmark-model-override-blocker.md  benchmark-redesign-task-and-eval-spec.md  bootstrap.md  bridge-all-slash-commands.md  bridge-provider-routing.md  brutus-release-pipeline.md  canonical-control-action-matrix.md  chronos-native-ts.md  claude-code-expectation-friction.md  cleave-checkpoint-failure-clarity.md  cleave-checkpoint-parity.md  cleave-child-dispatch-quality.md  cleave-child-timeout.md  cleave-dirty-tree-checkpointing.md  cleave-prerequisite-prompting.md  cleave-process-tree.md  cleave-steer-throttling.md  cleave-submodule-handling.md  cleave-task-progress.md  cleave-test-architect.md  cleave-title-progress-sync.md  cleave.md  (+167 more)
(+653 files in other folders)
