[package]
name = "omegon-codescan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code and knowledge indexing for codebase_search — regex AST + BM25 + markdown"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# SQLite cache
rusqlite = { version = "0.32", features = ["bundled"] }

# Content hashing
sha2 = "0.10"
hex = "0.4"

# Markdown parsing
pulldown-cmark = "0.12"

# File walking
glob = "0.3"
walkdir = "2"

# Tree-sitter AST parsing (code scanner)
tree-sitter = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"

# Regex fallback (used when tree-sitter parse fails)
regex = "1"

[dev-dependencies]
tempfile = "3"
