[package]
name = "omegon-extension"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Styrene Lab <admin@styrene.io>"]
description = "Omegon extension SDK — safe, versioned interface for third-party extensions"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["omegon", "extension", "rpc", "sdk", "agent"]
categories = ["development-tools", "api-bindings"]
rust-version = "1.85"

[dependencies]
tokio = { workspace = true, features = ["io-util", "rt", "sync", "process", "macros"] }
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
